# ess-console

./: .gitmodules  CMakeLists.txt  EsCommConfig.h  EsCoreConfig.h  EsCoreGuiConfig.h  EsScriptConfig.h  ess-console.config.cmake
apps-desktop/ess-console/tag-1.15.1/: CMakeLists.txt  EsCoreConfig.h  EsScriptConfig.h  ess-console.config.cmake
apps-desktop/ess-console/tag-1.15.1/main/: EsCompiledScriptDocument.h  EsDocumentManager.cpp  EsDocumentManager.h  EsDocumentManagerIntf.h  EsPathsListDlg.h  EsSconsoleApp.h  EsSconsoleMain.cpp  EsSconsoleMain.h  EsSconsoleOutputBase.cpp  EsScriptDocument.cpp  EsScriptDocument.h  EsScriptEditorView.cpp  EsScriptEditorView.h  EsSyntaxHighlighterPreferences.cpp  EsSyntaxHighlighterPreferences.h  EsSyntaxHighlighterPreferences.lex_log.hxx  EsSyntaxHighlighterPreferences.specs.hxx  EsTextDocument.cpp  EsTextEditorView.cpp  EsTextEditorView.h  EsTextEditorViewBase.cpp  EsTextEditorViewBase.h  ess_console.cpp  ess_console_pch.h
apps-desktop/ess-console/tag-1.15.1/main/res/: abort_16x16.xpm  ac_enumItems_16x16.xpm  ac_keywords_16x16.xpm  ac_objects_16x16.xpm  ac_ofields_16x16.xpm  ac_svcs_16x16.xpm  bm9_16x16.xpm  bmgeneric_16x16.xpm  bookmark_16x16.xpm  brk_16x16.xpm  close_16x16.xpm  close_all_16x16.xpm  compile_16x16.xpm  debug_16x16.xpm  debug_pause_16x16.xpm  debug_step_16x16.xpm  execline_16x16.xpm  module_help_16x16.xpm  save_as_16x16.xpm  script_file_16x16.xpm  select_all_16x16.xpm
apps-desktop/ess-console/tag-1.15.1/setup/: setup.iss  setup_defs.iss.in  updcast.xml
main/: CMakeLists.txt  EsCodeInsightView.cpp  EsCodeInsightView.h  EsCompiledScriptDocument.cpp  EsCompiledScriptDocument.h  EsCompiledScriptView.cpp  EsCompiledScriptView.h  EsDbgLogRulesDlg.cpp  EsDbgLogRulesDlg.h  EsDocument.cpp  EsDocument.h  EsOpenedDocumentList.cpp  EsOpenedDocumentList.h  EsPathsListDlg.cpp  EsPathsListDlg.h  EsSconsoleApp.cpp  EsSconsoleApp.h  EsSconsoleCommandLineParams.cpp  EsSconsoleCommandLineParams.h  EsSconsoleCompilerOutput.cpp  EsSconsoleCompilerOutput.h  EsSconsoleEvtDefs.h  EsSconsoleMain.cpp  EsSconsoleMain.h  EsSconsoleOutputBase.cpp  EsSconsoleOutputBase.h  EsSconsoleParams.cpp  EsSconsoleParams.h  EsSconsoleScriptOutput.cpp  EsSconsoleScriptOutput.h  EsScriptDocument.cpp  EsScriptDocument.h  EsScriptEditorView.cpp  EsScriptEditorView.h  EsSyntaxHighlighterPreferences.cpp  EsSyntaxHighlighterPreferences.lex_cpp.hxx  EsSyntaxHighlighterPreferences.lex_ess.hxx  EsTextDocument.cpp  EsTextDocument.h  EsTextEditorViewBase.cpp  (+4 more)
main/res/: ac_attrs_16x16.xpm  ac_consts_16x16.xpm  ac_enums_16x16.xpm  ac_globfuncs_16x16.xpm  ac_gvars_16x16.xpm  ac_ofuncs_16x16.xpm  ac_oprops_16x16.xpm  ac_ovars_16x16.xpm  ac_varsvcs_16x16.xpm  appicon.xpm  bm0_16x16.xpm  bm1_16x16.xpm  bm2_16x16.xpm  bm3_16x16.xpm  bm4_16x16.xpm  bm5_16x16.xpm  bm6_16x16.xpm  bm7_16x16.xpm  bm8_16x16.xpm  brk_inactive_16x16.xpm  brk_invalid_16x16.xpm  close_window_16x16.xpm  execute_16x16.xpm  glyphs.cdr  help_16x16.xpm  info_16x16.xpm  res.rc  save_16x16.xpm  save_all_16x16.xpm  version.rc.in
setup/: 1.15.0.html  1.15.1.html  1.15.9.html  CMakeLists.txt  setup.iss  setup_defs.iss.in  setup_messages.iss  updcast.xml
